// 神社・御朱印投稿サービス データベース設計（最適化版）

// Note: Supabase Auth関連テーブル (auth.users等) は自動管理されるため除外

// ========================================
// ユーザー関連テーブル
// ========================================

// 外部公開されるため UUID を維持
Table users {
  id UUID [pk, ref: > auth.users.id, note: 'Supabase auth.usersと連携']
  username VARCHAR(100) [unique, not null]
  email VARCHAR(255) [unique, not null, note: 'auth.usersから同期']
  role_id BIGINT [not null, ref: > roles.id, default: 2, note: 'デフォルトは一般ユーザー']
  profile_image_url TEXT
  bio TEXT
  is_active BOOLEAN [default: true]
  created_at TIMESTAMPTZ [default: `NOW()`]
  updated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    username [name: 'idx_users_username']
    email [name: 'idx_users_email']
    created_at [name: 'idx_users_created_at']
  }
}

// 内部テーブルのため BIGSERIAL に変更
Table user_providers {
  id BIGSERIAL [pk]
  user_id UUID [not null, ref: > users.id]
  provider TEXT [not null, note: 'google, github, twitter, email']
  provider_user_id TEXT [not null]
  provider_email TEXT
  linked_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    (provider, provider_user_id) [unique, name: 'uk_provider_user']
    user_id [name: 'idx_user_providers_user_id']
  }
}

// 1対1関係のため user_id を主キーに
Table user_stats {
  user_id UUID [pk, ref: - users.id]
  post_count INT [default: 0]
  total_likes_received INT [default: 0]
  visited_shrine_count INT [default: 0]
  collected_goshuin_count INT [default: 0]
  registered_shrine_count INT [default: 0]
  registered_goshuin_count INT [default: 0]
  follower_count INT [default: 0]
  following_count INT [default: 0]
  updated_at TIMESTAMPTZ [default: `NOW()`]
}

// ========================================
// サブスクリプション関連
// ========================================

// Stripe連携のため UUID を維持
Table subscriptions {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id]
  stripe_customer_id TEXT [unique]
  stripe_subscription_id TEXT [unique]
  status TEXT [not null, note: 'active, canceled, past_due, trialing']
  plan_id TEXT [not null, ref: > subscription_plans.id]
  current_period_start TIMESTAMPTZ
  current_period_end TIMESTAMPTZ
  cancel_at_period_end BOOLEAN [default: false]
  created_at TIMESTAMPTZ [default: `NOW()`]
  updated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    user_id [name: 'idx_subscriptions_user_id']
    status [name: 'idx_subscriptions_status']
  }
}

// プランIDは外部公開されるため TEXT を維持
Table subscription_plans {
  id TEXT [pk]
  name TEXT [not null]
  description TEXT
  price_monthly INTEGER [not null]
  price_yearly INTEGER
  features JSONB
  stripe_price_id_monthly TEXT
  stripe_price_id_yearly TEXT
  is_active BOOLEAN [default: true]
  created_at TIMESTAMPTZ [default: `NOW()`]
}

// ========================================
// 権限管理
// ========================================

// ロールマスターテーブル
Table roles {
  id BIGSERIAL [pk]
  name TEXT [unique, not null, note: 'anonymous, user, premium_user, moderator, admin, super_admin']
  display_name TEXT [not null, note: '一般ユーザー, プレミアムユーザー, モデレーター, 管理者, 最高管理者']
  description TEXT
  level INTEGER [not null, note: '権限レベル（数値が高いほど強い権限）']
  permissions JSONB [note: '具体的な権限設定']
  is_active BOOLEAN [default: true]
  created_at TIMESTAMPTZ [default: `NOW()`]
  updated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    name [unique, name: 'uk_roles_name']
    level [name: 'idx_roles_level']
  }
}

// ========================================
// 監査ログ
// ========================================

// セキュリティ上重要なため UUID を維持
Table audit_logs {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [ref: > users.id]
  action TEXT [not null]
  table_name TEXT
  record_id TEXT
  old_data JSONB
  new_data JSONB
  ip_address INET
  user_agent TEXT
  metadata JSONB
  created_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    user_id [name: 'idx_audit_logs_user_id']
    created_at [name: 'idx_audit_logs_created_at']
    action [name: 'idx_audit_logs_action']
  }
}

// ========================================
// 神社関連
// ========================================

// 外部公開されるため UUID を維持
Table shrines {
  id UUID [pk, default: `gen_random_uuid()`]
  name VARCHAR(255) [not null]
  name_kana VARCHAR(255)
  description TEXT
  address TEXT
  latitude DECIMAL(10,8)
  longitude DECIMAL(11,8)
  phone VARCHAR(20)
  website_url TEXT
  created_by_user_id UUID [ref: > users.id]
  status TEXT [not null, default: 'pending', note: 'pending, approved, rejected']
  approved_at TIMESTAMPTZ
  approved_by_user_id UUID [ref: > users.id]
  created_at TIMESTAMPTZ [default: `NOW()`]
  updated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    name [name: 'idx_shrines_name']
    status [name: 'idx_shrines_status']
    (latitude, longitude) [name: 'idx_shrines_location']
  }
}

// 内部テーブルのため BIGSERIAL に変更
Table shrine_images {
  id BIGSERIAL [pk]
  shrine_id UUID [not null, ref: > shrines.id]
  image_url TEXT [not null]
  is_primary BOOLEAN [default: false]
  uploaded_by_user_id UUID [ref: > users.id]
  created_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    shrine_id [name: 'idx_shrine_images_shrine_id']
    (shrine_id, is_primary) [name: 'idx_shrine_images_primary']
  }
}

// 外部公開されるため UUID を維持
Table goshuin_types {
  id UUID [pk, default: `gen_random_uuid()`]
  shrine_id UUID [not null, ref: > shrines.id]
  name VARCHAR(255) [not null]
  description TEXT
  price INT
  is_limited BOOLEAN [default: false]
  available_from DATE
  available_to DATE
  created_by_user_id UUID [ref: > users.id]
  status TEXT [not null, default: 'pending', note: 'pending, approved, rejected']
  approved_at TIMESTAMPTZ
  approved_by_user_id UUID [ref: > users.id]
  created_at TIMESTAMPTZ [default: `NOW()`]
  updated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    shrine_id [name: 'idx_goshuin_types_shrine_id']
    status [name: 'idx_goshuin_types_status']
  }
}

// ========================================
// 投稿関連
// ========================================

// 外部公開されるため UUID を維持
Table posts {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id]
  content TEXT
  visit_date DATE
  is_published BOOLEAN [default: true]
  created_at TIMESTAMPTZ [default: `NOW()`]
  updated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    user_id [name: 'idx_posts_user_id']
    created_at [name: 'idx_posts_created_at']
    visit_date [name: 'idx_posts_visit_date']
    (is_published, created_at) [name: 'idx_posts_published_created']
  }
}

// 内部テーブルのため BIGSERIAL に変更
Table post_images {
  id BIGSERIAL [pk]
  post_id UUID [not null, ref: > posts.id]
  image_url TEXT [not null]
  display_order INT [default: 0]
  created_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    post_id [name: 'idx_post_images_post_id']
    (post_id, display_order) [name: 'idx_post_images_order']
  }
}

// 複合主キーで十分（ID不要）
Table post_shrines {
  post_id UUID [pk, ref: > posts.id]
  shrine_id UUID [pk, ref: > shrines.id]
  
  indexes {
    shrine_id [name: 'idx_post_shrines_shrine_id']
  }
}

// 内部テーブルのため BIGSERIAL に変更
Table post_goshuin {
  id BIGSERIAL [pk]
  post_id UUID [not null, ref: > posts.id]
  goshuin_type_id UUID [not null, ref: > goshuin_types.id]
  image_url TEXT
  received_date DATE
  created_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    post_id [name: 'idx_post_goshuin_post_id']
    goshuin_type_id [name: 'idx_post_goshuin_goshuin_type_id']
  }
}

// 複合主キーで十分（ID不要）
Table post_likes {
  user_id UUID [pk, ref: > users.id]
  post_id UUID [pk, ref: > posts.id]
  created_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    post_id [name: 'idx_post_likes_post_id']
    created_at [name: 'idx_post_likes_created_at']
  }
}

// ========================================
// ソーシャル機能
// ========================================

// 複合主キーで十分（ID不要）
Table follows {
  follower_user_id UUID [pk, ref: > users.id]
  following_user_id UUID [pk, ref: > users.id]
  created_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    following_user_id [name: 'idx_follows_following_user_id']
  }
}

// ========================================
// ランキング関連（ハイブリッド方式）
// ========================================

// 内部処理用と外部公開用の両方のIDを持つ
Table ranking_snapshots {
  id BIGSERIAL [pk]
  public_id UUID [unique, not null, default: `gen_random_uuid()`]
  ranking_type TEXT [not null, note: 'visited_shrines, collected_goshuin, registered_shrines, registered_goshuin, total_likes']
  period_type TEXT [not null, note: 'weekly, monthly, yearly, all_time']
  period_start DATE [not null]
  period_end DATE [not null]
  generated_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    public_id [name: 'idx_ranking_snapshots_public_id']
    (ranking_type, period_type, period_start) [name: 'idx_ranking_snapshots_type_period']
  }
}

// 内部テーブルのため BIGSERIAL に変更
Table ranking_entries {
  id BIGSERIAL [pk]
  snapshot_id BIGINT [not null, ref: > ranking_snapshots.id]
  user_id UUID [not null, ref: > users.id]
  rank INT [not null]
  score INT [not null]
  
  indexes {
    (snapshot_id, rank) [name: 'idx_ranking_entries_snapshot_rank']
    user_id [name: 'idx_ranking_entries_user_id']
  }
}

// ========================================
// バッジ機能（ハイブリッド方式）
// ========================================

// 内部処理用と外部公開用の両方のIDを持つ
Table user_badges {
  id BIGSERIAL [pk]
  public_id UUID [unique, not null, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id]
  badge_type VARCHAR(50) [not null, note: 'first_post, shrine_10, goshuin_50等']
  achieved_at TIMESTAMPTZ [default: `NOW()`]
  
  indexes {
    public_id [name: 'idx_user_badges_public_id']
    (user_id, badge_type) [unique, name: 'uk_user_badges_user_badge']
    user_id [name: 'idx_user_badges_user_id']
  }
}

// ========================================
// マイグレーション用
// ========================================

Table migration_id_mapping {
  old_id BIGINT [not null]
  new_id UUID [not null]
  table_name TEXT [not null]
  
  indexes {
    (table_name, old_id) [pk]
  }
  
  Note: '既存データ移行時の一時テーブル'
}

// ========================================
// 外部参照（仮想テーブル）
// ========================================

Table auth.users {
  id UUID [pk]
  email VARCHAR
  
  Note: 'Supabase Authが管理する認証テーブル（参照のみ）'
}